# bench_of_snafu_vs_anyhow

./: Cargo.toml  README.md
my_whatever/: Cargo.toml
my_whatever/src/: lib.rs
src/: create_type.rs  dyn_trait_obj.rs  helpers.rs  main.rs
